# slacker-tauri

./: DEBUGGING.md  GIT_COMMANDS.md  build.sh  index.html  package.json  tsconfig.json
.cursor/rules/: minimal-design.mdc  project.mdc
.storybook/: main.ts  preview.ts  preview.tsx
docs/: App-정책.md  cli  update.txt  단축키-설계.md  데이터-설계.md  빌드-배포-osx.md  앱-아이콘.md  콘셉.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/db/: commands.rs  migration.rs  mod.rs  models.rs  schema.rs
src/app/: App.tsx
src/entities/task/: index.ts  types.ts
src/features/tasks/shared/: TaskItem.stories.tsx  TaskItem.tsx  TaskList.tsx  index.ts  types.ts
src/pages/: MainPage.tsx  OnboardingPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TaskSettingsPage.tsx  TaskWidgetPage.tsx  index.ts
src/shared/hooks/: index.ts  useAppVersion.ts  useDbStatus.ts  useKeyboardShortcuts.ts  useModifierHold.ts  useSettings.ts  useSidebarCounts.ts  useTableViewer.ts  useTasks.ts
src/shared/lib/: notification.ts  openTaskWidget.ts  openTaskWindow.ts  shortcuts.ts  tray.ts  widgetStorage.ts  windowStateStorage.ts
src/shared/ui/: AddButton.stories.tsx  AddButton.tsx  Button.tsx  Checkbox.stories.tsx  Checkbox.tsx  CommandKeyOverlay.tsx  Input.tsx  KeyboardShortcutsHelp.tsx  SettingsInput.tsx  SettingsSelect.tsx  SettingsToggle.tsx  ShortcutHintBar.tsx  SortDropdown.stories.tsx  SortDropdown.tsx  index.ts
src/widgets/: FloatingTaskWidget.tsx  TaskSection.tsx  index.ts
src/widgets/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx  UserInfo.tsx  index.ts
src/widgets/taskWidget/: TaskWidget.tsx  index.ts
(+25 files in other folders)
